--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,95 +2,94 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/yellowBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="false"
+    android:background="@mipmap/hive_background"
     tools:context=".MainActivity">
-
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toTopOf="@+id/paragraph"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_hive_central"/>
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:minHeight="440dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:srcCompat="@drawable/ic_lineback" />
-
-    <TextView
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_constraintBottom_toTopOf="@id/linearLayout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/black"
-        android:text="@string/mainActivity_toast_loginSubtitle"
-        android:textAlignment="center"
-        android:lineHeight="24sp"
-        android:textSize="18sp"
-        android:id="@+id/paragraph"
-        />
-
     <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/paragraph">
+        android:layout_margin="10dp">
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/appCompatImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:src="@drawable/ic_hive_central"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="233dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="sans-serif-condensed"
+            android:text="\nconhecimento compartilhado\n por todos para todos"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
 
         <EditText
             android:id="@+id/mainActivity_editText_usernameField"
-            style="@style/loginInput"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:ems="10"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/edit_text"
             android:hint="@string/mainActivity_textView_usernameLabel"
-            android:importantForAutofill="no"
-            android:inputType="textPersonName" />
-
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
             android:id="@+id/mainActivity_editText_passwordField"
-            style="@style/loginInput"
-            android:layout_width="match_parent"
+            android:inputType="textPassword"
+            android:background="@drawable/edit_text"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="6dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:ems="10"
+            android:layout_marginTop="20dp"
             android:hint="@string/mainActivity_textView_passwordLabel"
-            android:importantForAutofill="no"
-            android:inputType="textPassword" />
+            android:layout_gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/mainActivity_editText_usernameField" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:layout_gravity="center"
+            android:text="@string/forgotPass"
+            app:layout_constraintTop_toBottomOf="@+id/mainActivity_editText_passwordField" />
 
         <Button
             android:id="@+id/mainActivity_button_submit"
-            style="@style/loginButton"
-            android:onClick="submit"
+            android:paddingHorizontal="40dp"
+            android:background="@drawable/login_button"
+            android:textColor="@color/colorLightGray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:text="@string/mainActivity_button_submit"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            android:onClick="submit"
             />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/asGuest"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/mainActivity_button_submit"
+            tools:layout_editor_absoluteX="168dp"
+            />
+
     </LinearLayout>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
