--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#f2cb4b</color>
+    <color name="colorPrimaryDark">#FF9800</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorOrange">#F6BD60</color>
+    <color name="colorLightGray">#F5F4F4</color>
     <color name="white">#FFFFFF</color>
     <color name="yellow">#f6bd60</color>
     <color name="black">#313638</color>
