--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,24 +8,41 @@
 
     <ImageView
         android:id="@+id/home_imageView_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/ic_hiveuser" />
 
     <TextView
         android:id="@+id/home_textView_name"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="TextView"
+        android:text="Gustavo Pontes [placeholder]"
         android:textSize="27sp"
         app:layout_constraintBottom_toBottomOf="@+id/home_imageView_img"
         app:layout_constraintStart_toEndOf="@+id/home_imageView_img"
         app:layout_constraintTop_toTopOf="@+id/home_imageView_img" />
+
+    <ImageView
+        android:id="@+id/home_settings"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_settings_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="34dp" />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_bookmark_icon"
+        app:layout_constraintRight_toLeftOf="@id/home_settings"
+        tools:layout_editor_absoluteY="34dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recyclerView_notes"
@@ -37,6 +54,7 @@
         app:layout_constraintHorizontal_bias="0.443"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_imageView_img"
-        tools:listitem="@layout/item_note" />
+        tools:listitem="@layout/item_note"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
