--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,44 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".Home">
 
-    <ImageView
-        android:id="@+id/home_imageView_img"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_hiveuser" />
-
-    <TextView
-        android:id="@+id/home_textView_name"
-        android:layout_width="200dp"
+    <LinearLayout
+        android:id="@+id/home_information_header"
+        android:layout_width="422dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Gustavo Pontes [placeholder]"
-        android:textSize="27sp"
-        app:layout_constraintBottom_toBottomOf="@+id/home_imageView_img"
-        app:layout_constraintStart_toEndOf="@+id/home_imageView_img"
-        app:layout_constraintTop_toTopOf="@+id/home_imageView_img" />
+        android:paddingVertical="20dp"
+        tools:layout_editor_absoluteX="-11dp"
+        tools:layout_editor_absoluteY="2dp">
+        <ImageView
+            android:id="@+id/home_imageView_img"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="18dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_hiveuser" />
 
-    <ImageView
-        android:id="@+id/home_settings"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_settings_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="34dp" />
+        <TextView
+            android:id="@+id/home_textView_name"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Gustavo Pontes [placeholder]"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/home_imageView_img"
+            app:layout_constraintStart_toEndOf="@+id/home_imageView_img"
+            app:layout_constraintTop_toTopOf="@+id/home_imageView_img" />
 
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginRight="16dp"
-        android:src="@drawable/ic_bookmark_icon"
-        app:layout_constraintRight_toLeftOf="@id/home_settings"
-        tools:layout_editor_absoluteY="34dp" />
+        <ImageView
+            android:id="@+id/home_settings"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_bookmark_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="34dp" />
 
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/ic_settings_icon"
+            app:layout_constraintRight_toLeftOf="@id/home_settings"
+            tools:layout_editor_absoluteY="34dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/home_topics_header"
+        app:layout_constraintTop_toBottomOf="@id/home_information_header"
+        android:background="@color/colorLightGray"
+        android:layout_width="match_parent"
+        android:layout_height="100dp">
+
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recyclerView_notes"
         android:layout_width="0dp"
@@ -53,7 +67,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.443"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_imageView_img"
+        app:layout_constraintTop_toBottomOf="@+id/home_topics_header"
         tools:listitem="@layout/item_note"
         />
 
