--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,11 +8,9 @@
 
     <LinearLayout
         android:id="@+id/home_information_header"
-        android:layout_width="422dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="20dp"
-        tools:layout_editor_absoluteX="-11dp"
-        tools:layout_editor_absoluteY="2dp">
+        android:paddingVertical="20dp">
         <ImageView
             android:id="@+id/home_imageView_img"
             android:layout_width="70dp"
@@ -50,14 +48,49 @@
             app:layout_constraintRight_toLeftOf="@id/home_settings"
             tools:layout_editor_absoluteY="34dp" />
     </LinearLayout>
-    <LinearLayout
+    <HorizontalScrollView
         android:id="@+id/home_topics_header"
         app:layout_constraintTop_toBottomOf="@id/home_information_header"
-        android:background="@color/colorLightGray"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
-
-    </LinearLayout>
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:background="@color/colorLightGray"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+            <TextView
+                android:gravity="center"
+                android:textColor="@color/colorLightGray"
+                android:background="@color/colorOrange"
+                android:text="Populares"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="10dp"/>
+            <TextView
+                android:gravity="center"
+                android:textColor="@color/colorLightGray"
+                android:background="@color/lightRed"
+                android:text="Recentes"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="10dp"/>
+            <TextView
+            android:gravity="center"
+            android:textColor="@color/colorLightGray"
+            android:background="@color/lightBlack"
+            android:text="BackEnd"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+                android:layout_marginHorizontal="10dp"/>
+            <TextView
+                android:gravity="center"
+                android:textColor="@color/colorLightGray"
+                android:background="@color/lightBlue"
+                android:text="FrontEnd"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="10dp"/>
+        </LinearLayout>
+    </HorizontalScrollView>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recyclerView_notes"
         android:layout_width="0dp"
