--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:src="@drawable/ic_hive_central"/>
 
     <ImageView
+        android:layout_height="wrap_content"
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:minHeight="440dp"
