--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,11 @@
         android:id="@+id/home_information_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="20dp">
+        android:paddingVertical="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
         <ImageView
             android:id="@+id/home_imageView_img"
             android:layout_width="70dp"
@@ -56,6 +60,7 @@
         <LinearLayout
             android:background="@color/colorLightGray"
             android:layout_width="match_parent"
+            android:id="@+id/linearListTags"
             android:layout_height="100dp">
             <TextView
                 android:gravity="center"
