--- a/app/src/main/res/layout/activity_open_article.xml
+++ b/app/src/main/res/layout/activity_open_article.xml
@@ -6,85 +6,100 @@
     android:layout_height="match_parent"
     tools:context=".OpenArticle">
 
-        <ImageView
-            android:id="@+id/articleImage"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
+    <ImageView
+        android:id="@+id/articleImage"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@mipmap/node"
+        tools:layout_editor_absoluteX="2dp" />
 
-            android:background="@mipmap/node"
-            tools:layout_editor_absoluteX="2dp" />
-
+    <ScrollView
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:scrollbars="vertical"
+        android:id="@+id/scrollArticle"
+        >
         <LinearLayout
-            android:id="@+id/articleAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="20dp"
-            app:layout_constraintTop_toBottomOf="@id/articleImage">
+            android:background="@color/colorLightGray"
+            android:layout_marginTop="250dp"
+            android:paddingBottom="250dp"
+            android:orientation="vertical"
+            >
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:id="@+id/articleAuthor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                app:layout_constraintTop_toBottomOf="@id/articleImage">
+
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:src="@drawable/ic_hiveuser" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginTop="10dp"
                     android:text="Gabriel Leme\n08/09/2019" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:text="Leia em 8 min" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="50dp"
+                        android:src="@drawable/ic_bookmark_icon" />
+                </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/title"
+                app:layout_constraintTop_toBottomOf="@id/articleAuthor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right">
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="REST API com Node.JS"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:text="Leia em 8 min" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="50dp"
-                    android:src="@drawable/ic_bookmark_icon" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/article"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
+                android:text="@string/placeholderArticle"
+                android:textSize="14sp"
+                />
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/title"
-            app:layout_constraintTop_toBottomOf="@id/articleAuthor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="REST API com Node.JS"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            />
-    <ScrollView
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:fillViewport="true"
-        android:scrollbars="vertical"
-        >
-        <TextView
-            android:id="@+id/article"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingHorizontal="30dp"
-            android:text="@string/placeholderArticle"
-            android:textSize="14sp"
-            />
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
