--- a/app/src/main/res/layout/activity_open_article.xml
+++ b/app/src/main/res/layout/activity_open_article.xml
@@ -75,7 +75,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/open_article_title"
                 app:layout_constraintTop_toBottomOf="@id/articleAuthor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,13 +88,12 @@
 
 
             <TextView
-                android:id="@+id/article"
+                android:id="@+id/open_article_article"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
-                android:text="@string/placeholderArticle"
                 android:textSize="14sp"
                 />
 
