--- a/app/src/main/res/layout/activity_open_article.xml
+++ b/app/src/main/res/layout/activity_open_article.xml
@@ -6,15 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".OpenArticle">
 
-    <ImageView
+    <LinearLayout
         android:id="@+id/articleImage"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@mipmap/node"
-        tools:layout_editor_absoluteX="2dp" />
+        android:background="@color/colorOrange"
+        tools:layout_editor_absoluteX="2dp"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_isologo"
+            android:layout_gravity="center"/>
+    </LinearLayout>
 
     <ScrollView
         app:layout_constraintTop_toTopOf="parent"
@@ -64,6 +72,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
+                        android:id="@+id/tv_ReadIn"
                         android:text="Leia em 8 min" />
 
                     <ImageView
