--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,7 +29,7 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Gustavo Pontes [placeholder]"
+            android:text="Gustavo Pontes"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/home_imageView_img"
             app:layout_constraintStart_toEndOf="@+id/home_imageView_img"
